--- a/src/app/styl/_core/reset.styl
+++ b/src/app/styl/_core/reset.styl
@@ -1,3 +1,10 @@
 // ==================================================
-// Logo
+// Reset
 // ==================================================
+
+*
+  box-sizing border-box
+
+  &:before
+  &:after
+    box-sizing border-box
