--- a/src/app/styl/quarks/utilies.styl
+++ b/src/app/styl/quarks/utilies.styl
@@ -1,18 +1,16 @@
-//
+// ==================================================
 // Utilies Class
 //
 // 1. Screen Reader Only
 // 2. Hidden
-//
 // ==================================================
-
 
 //
 // 1. Screen Reader Only
 // --------------------------------------------------
 
 .sr-only
-  hidden(sr)
+  $hidden(sr)
 
 
 //
@@ -20,5 +18,5 @@
 // --------------------------------------------------
 
 .hidden
-  hidden(all)
+  $hidden(all)
 
