directive for search movies

--- a/src/app/styl/atoms/buttons.styl
+++ b/src/app/styl/atoms/buttons.styl
@@ -1,19 +1,7 @@
-// ==================================================
-// Buttons
-// ==================================================
-
-/*!---
-title:   Buttons
-section: Atoms
----
-
-Button styles can be applied to **any** element. Typically you'll want to use
-either a `<button>` or an `<a>` element:
-
-```example:html
-<button class="btn">Click</button>
-<a class="btn" href="/some-page">Some Page</a>
-``` 
-*/
-
-
+.search__button
+  border none
+  background-color $brand-grey
+  color $white
+  border-radius 0 5px 5px 0
+  padding 10px
+  margin-left -10px
