Adding account components, next step is accountService

--- a/src/app/styl/molecules/forms.styl
+++ b/src/app/styl/molecules/forms.styl
@@ -1,45 +1,25 @@
-// ==================================================
-// Forms
-// ==================================================
+.form-control
+  margin-bottom 15px
 
-/*!---
-title:   Forms
-section: Molecules
----
+.form-input
+  display block
+  height 25px
+  width 300px
+  color #555
+  background-color #fff
+  border 1px solid #ccc
+  border-radius 4px
+  box-shadow inset 0 1px 1px rgba(0,0,0,.075)
 
-The `<form>` element represents a document section that contains interactive controls to submit information.
 
-###### Input
+.label-control
+  display block
+  font-size 1.5rem
 
-The HTML element <input< is used to create interactive controls for web-based forms in order to accept data from the user.
-
-```example:html
-<input class="form-control" placeholder="Input example">
-```
-
-###### Select
-
-The `<select>` element represents a control that presents a menu of options.
-
-```example:html
-<select class="form-control">
-  <option>Select example</option>
-</select>
-```
-
-###### Label
-
-The `<label>` represents a caption for an item in a user interface.
-
-```example:html
-<label>Label example</label>
-```
-
-###### Legend
-
-The `<legend>` represents a caption for the content of its parent.
-
-```example:html
-<legend>Legend example</legend>
-``` 
-*/
+.form-button
+  padding 10px 30px
+  font-size 2rem
+  border none
+  border-radius 5px
+  background-color $brand-primary
+  color $white
