--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <ul>
-    <li><a ui-sref="login">Login</a></li>
-    <li><a ui-sref="register">Register</a></li>
+    <li><a ui-sref="main">Home </a></li>
+    <li><a ui-sref="account">Login or Register</a></li>
     <li><a ui-sref="favorites">Favorites</a></li>
   </ul>
 </nav>
