--- a/src/app/styl/atoms/inputs.styl
+++ b/src/app/styl/atoms/inputs.styl
@@ -1,7 +1,7 @@
 .search__field
   border none
   background-color $black
-  color $brand-grey
+  color $white
   padding 10px
   border-radius 5px 0 0 5px
   width 400px
