--- a/src/app/styl/masters/scaffolding.styl
+++ b/src/app/styl/masters/scaffolding.styl
@@ -11,3 +11,9 @@ body
   font-size $text-size
   margin 0
   overflow-x hidden
+
+.link
+  color #0000ff
+  font-size 1.5rem
+  font-weight bold
+  cursor pointer
